--- a/demo-angular/src/components/partials/nav/nav.component.html
+++ b/demo-angular/src/components/partials/nav/nav.component.html
@@ -8,8 +8,8 @@
     [opened]="!(isHandset$ | async)">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Inicio</a>
-      <a mat-list-item href="#">Proyectos</a>
+      <a mat-list-item (click)="navigateTo('home-page')">Inicio</a>
+      <a mat-list-item (click)="navigateTo('projects-page')">Proyectos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
