varios: - Implementada página de home - Actualizado readme

--- a/demo-angular/src/pages/home-page/home-page.component.html
+++ b/demo-angular/src/pages/home-page/home-page.component.html
@@ -1,3 +1,17 @@
-<p>
-  home-page works!
-</p>
+<div style="font-size: 20px; text-align: center; margin: 50px">
+  <div>
+  Este proyecto trata de crear un marco para la construcción de paneles de administración de proyectos construidos con Angular y Laravel.
+  </div>
+  <br>
+  <div>
+    Aspectos implementados:
+  </div>
+  <div>
+    <div>
+      - Estructura de proyecto
+    </div>
+    <div>
+      - Navegación entre rutas
+    </div>
+  </div>
+</div>
