--- a/demo-angular/src/pages/projects-page/projects-page.component.html
+++ b/demo-angular/src/pages/projects-page/projects-page.component.html
@@ -1,3 +1,12 @@
 <p>
-  projects-page works!
+  <app-project-table
+    [tableOptions]="{
+      autoload: true,
+      withPagination: false,
+      paginationItemsPerPage: null,
+      localStorageKey: 'project-table',
+      hasActionColumn: false,
+      hasCheckboxColumn: true
+    }"
+  ></app-project-table>
 </p>
