--- a/demo-angular/src/app/ng-template/tables/partials/header-table/header-table.component.html
+++ b/demo-angular/src/app/ng-template/tables/partials/header-table/header-table.component.html
@@ -13,9 +13,7 @@
 
       <div *ngIf="data.search.show" class="container__search flex__row">
         <div class="m-input-icon m-input-icon--left mr__10p Element__mr">
-          <mat-form-field class="example-full-width">
-            <input type="text" matInput id="header__search__{{ data.search.idText }}" placeholder="{{ data.search.placeholder | translate }}" (change)="enterSearch($event)">
-          </mat-form-field>
+          <input type="text" id="header__search__{{ data.search.idText }}" placeholder="{{ data.search.placeholder | translate }}" (change)="enterSearch($event)">
           <span class="m-input-icon__icon m-input-icon__icon--left">
                         <span >
                             <i class="{{ data.search.icon }}"></i>
@@ -28,7 +26,7 @@
   <div class="col-3">
     <div *ngIf="data.btns.length > 0" class="container__btn flex__row">
       <ng-container *ngFor="let item of data.btns">
-        <a  *ngIf="item.show" id="header__btn__{{ item.label }}" class="btn btn-sm btn-secondary m-btn m-btn--custom m-btn--icon Element__mr" data-target="#m_modal_create-organisation" data-toggle="modal" href="#" (click)="clickHeaderBtn($event)">
+        <a *ngIf="item.show" id="header__btn__{{ item.label }}" class="btn btn-sm btn-secondary m-btn m-btn--custom m-btn--icon Element__mr" data-target="#m_modal_create-organisation" data-toggle="modal" style="cursor: pointer" (click)="clickHeaderBtn($event)">
                 <span>
                     <i class="{{ item.icon }}"></i>
                     <span>{{ item.value | translate }}</span>
