--- a/demo-angular/src/styles.css
+++ b/demo-angular/src/styles.css
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-@import "~@ng-select/ng-select/themes/material.theme.css";
+/*@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';*/
+@import "~@ng-select/ng-select/themes/default.theme.css";
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~bootstrap/dist/css/bootstrap-grid.css";
+@import "~bootstrap/dist/css/bootstrap-reboot.css";
