--- a/demo-angular/src/components/forms/project-form/project-form.component.html
+++ b/demo-angular/src/components/forms/project-form/project-form.component.html
@@ -1,6 +1,8 @@
 <ng-container *ngIf="structure && project">
   <ng-container *ngFor="let field of structure">
-    <ng-template appInputForm></ng-template>
+    <div class="form-group">
+      <ng-template appInputForm></ng-template>
+    </div>
   </ng-container>
 </ng-container>
 
