. el input-text y el label ahora son componentes distintos

--- a/demo-angular/src/components/forms/project-form/project-form.component.html
+++ b/demo-angular/src/components/forms/project-form/project-form.component.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="structure && project">
   <ng-container *ngFor="let field of structure">
     <div class="form-group">
+      <ng-template appLabelForm></ng-template>
       <ng-template appInputForm></ng-template>
     </div>
   </ng-container>
