New components: Navbar and Sidebar

--- a/demo-angular/src/styles.css
+++ b/demo-angular/src/styles.css
@@ -4,3 +4,4 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~bootstrap/dist/css/bootstrap-grid.css";
 @import "~bootstrap/dist/css/bootstrap-reboot.css";
+@import "./assets/css/custom.css";
