--- a/demo-angular/src/pages/admin-component/admin-component.component.html
+++ b/demo-angular/src/pages/admin-component/admin-component.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+
+<div class="container__main">
+    <app-sidebar></app-sidebar>
+    <!-- <app-test-side></app-test-side> -->
+</div>
+
