. corrección de bug: No funciona la paginación en componente tabla #2

--- a/demo-angular/src/components/tables/project-table/project-table.component.html
+++ b/demo-angular/src/components/tables/project-table/project-table.component.html
@@ -10,7 +10,8 @@
     *ngIf="datas"
     [datas]="datas"
     [headers]="headers"
-    [paginations]="tableOptions.withPagination"
+    [withPagination]="tableOptions.withPagination"
+    [pagination]="pagination"
     (Edit)="onEdit($event)"
     (Delete)="onDelete($event)"
     (handlerlistPaginate)="listPaginate($event)"
