--- a/demo-angular/src/pages/projects-page/projects-page.component.html
+++ b/demo-angular/src/pages/projects-page/projects-page.component.html
@@ -2,8 +2,8 @@
   <app-project-table
     [tableOptions]="{
       autoload: true,
-      withPagination: false,
-      paginationItemsPerPage: null,
+      withPagination: true,
+      paginationItemsPerPage: 20,
       localStorageKey: 'project-table',
       hasActionColumn: false,
       hasCheckboxColumn: true
