Refactor components, Table, navbar, siderbar

--- a/demo-angular/src/components/navbar/navbar.component.html
+++ b/demo-angular/src/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <img *ngIf="configNavbar['logo']['isShow']" class="header__logo" [src]="configNavbar.logo.src" [alt]="configNavbar.logo.alt">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDemoAngular" aria-controls="navbarDemoAngular" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span><i id="icon_sidebar" class="fas fa-bars"></i></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarDemoAngular">
