--- a/demo-angular/src/components/sidebar/sidebar.component.html
+++ b/demo-angular/src/components/sidebar/sidebar.component.html
@@ -1,55 +1,57 @@
 <div class="container__sidebar">
-    <div id="sidebar" class="sidebar">
+  <div id="sidebar" class="sidebar">
 
-      <div class="container__btn__menu">
-        <button type="button" id="sidebarClose" class="navbar-btn sidebarClose">
-          <i id="icon_sidebar" class="fas fa-bars"></i>
-        </button>
-      </div>
-      <!-- Title -->
-      <div *ngIf="configNavbar.title.isShow" class="sidebar-header sidebar__title">
-          <h3>{{ configNavbar.title.text }}</h3>
-      </div>
-
-      <!-- List -->
-      <ul class="list-unstyled components">
-          <li *ngFor="let item of configNavbar['item']" class="sidebar__list">
-            <p class="title__item">{{ item.titleElement }}</p>
-              <ng-container *ngFor="let item of item['element']">
-                <a
-                  *ngIf="item.type === 'select'"
-                  href="#{{ item.href }}"
-                  data-toggle="collapse"
-                  aria-expanded="false"
-                  class="dropdown-toggle sidebar__element">
-                  <i class="{{ item.icon }}"></i>
-                  <span  id="sidebar__icon" class="sidebar__icon"> {{ item.label }}</span></a>
-
-                <ul *ngIf="item.type === 'select'" class="collapse list-unstyled" [id]="item.href">
-                  <ng-container *ngFor="let item of item['item']">
-                    <li>
-                      <a class="element__children" [href]="item.href"><i class="{{ item.icon }}"></i><span  id="sidebar__icon" class="sidebar__icon"> {{ item.label }}</span></a>
-                    </li>
-                  </ng-container>
-                </ul>
-
-                <a *ngIf="item.type === 'link'" class="sidebar__element" href=""><i class="{{ item.icon }}"></i><span  id="sidebar__icon" class="sidebar__icon"> {{ item.label }}</span></a>
-            </ng-container>
-          </li>
-      </ul>
-
-      <!-- Btn -->
-      <ul class="list-unstyled container__btn__sidebar">
-        <li *ngFor="let item of configNavbar['itemBtn']">
-          <a [href]="item.href" class="btn__sidebar__link {{ item.class }}">{{ item.label }}</a>
-        </li>
-      </ul>
+    <div class="container__btn__menu">
+      <button type="button" id="sidebarClose" class="navbar-btn sidebarClose">
+        <i id="icon_sidebar" class="fas fa-bars"></i>
+      </button>
+    </div>
+    <!-- Title -->
+    <div *ngIf="configNavbar.title.isShow" class="sidebar-header sidebar__title">
+        <h3>{{ configNavbar.title.text }}</h3>
     </div>
 
-    <div id="main" class="main">
-      <button type="button" id="sidebarCollapse" class="navbar-btn sidebarCollapse">
+    <!-- List -->
+    <ul class="list-unstyled components">
+        <li *ngFor="let item of configNavbar['item']" class="sidebar__list">
+          <p class="title__item">{{ item.titleElement }}</p>
+            <ng-container *ngFor="let item of item['element']">
+              <a
+                *ngIf="item.type === 'select'"
+                href="#{{ item.href }}"
+                data-toggle="collapse"
+                aria-expanded="false"
+                class="dropdown-toggle sidebar__element">
+                <i class="{{ item.icon }}"></i>
+                <span  id="sidebar__icon" class="sidebar__icon"> {{ item.label }}</span></a>
+
+              <ul *ngIf="item.type === 'select'" class="collapse list-unstyled" [id]="item.href">
+                <ng-container *ngFor="let item of item['item']">
+                  <li>
+                    <a class="element__children" [href]="item.href"><i class="{{ item.icon }}"></i><span  id="sidebar__icon" class="sidebar__icon"> {{ item.label }}</span></a>
+                  </li>
+                </ng-container>
+              </ul>
+
+              <a *ngIf="item.type === 'link'" class="sidebar__element" href=""><i class="{{ item.icon }}"></i><span  id="sidebar__icon" class="sidebar__icon"> {{ item.label }}</span></a>
+          </ng-container>
+        </li>
+    </ul>
+
+    <!-- Btn -->
+    <ul class="list-unstyled container__btn__sidebar">
+      <li *ngFor="let item of configNavbar['itemBtn']">
+        <a [href]="item.href" class="btn__sidebar__link {{ item.class }}">{{ item.label }}</a>
+      </li>
+    </ul>
+  </div>
+
+  <div id="main" class="main">
+    <div class="container__btn__menu__main">
+      <button type="button" id="sidebarCollapse" class="navbar-btn sidebarCollapse sidebarClose m-0">
         <i class="fas fa-bars"></i>
       </button>
-      <router-outlet></router-outlet>
     </div>
+    <router-outlet></router-outlet>
   </div>
+</div>
