--- a/demo-angular/src/styles.css
+++ b/demo-angular/src/styles.css
@@ -5,3 +5,4 @@
 @import "~bootstrap/dist/css/bootstrap-grid.css";
 @import "~bootstrap/dist/css/bootstrap-reboot.css";
 @import "./assets/css/custom.css";
+@import "./assets/css/var.css";
